...
        backgroundView.backgroundColor = .white
        headerView.addSubview(backgroundView)
        backgroundView.autoPinEdge(.bottom, to: .top, of: headerView)
        backgroundView.autoSetDimensions(to: CGSize(width: UIScreen.main.bounds.width, height: 300))
        
        let button = UIButton()
        button.setTitle("Menu", for: .normal)
        button.setTitleColor(UIColor.accentTeal, for: .normal)
        button.addTarget(self, action: #selector(menuAction), for: .touchUpInside)
        headerView.addSubview(button)
        button.autoAlignAxis(toSuperviewAxis: .horizontal)
        button.autoPinEdge(toSuperviewEdge: .right, withInset: 20)
        
...

        self.present(alertController, animated: true, completion: nil)
    }
    
    @objc func menuAction() {
        let ac = UIAlertController(title: nil, message: nil, preferredStyle: .actionSheet)
        ac.addAction(UIAlertAction(title: "Log out", style: .destructive, handler: { (action) in
            UserManager.shared.logout()
            self.navigationController?.popViewController(animated: true)
        }))
        ac.addAction(UIAlertAction(title: "Cancel", style: .cancel))
        ac.popoverPresentationController?.barButtonItem = self.navigationItem.rightBarButtonItem
        present(ac, animated: true)
...
